# metacrafter

./: .gitignore  .metacrafter  AGENTS.md  CHANGELOG.md  README.md  README.rst  atividade-operacional-do-sns-24.json  data.csv  data.jsonl  report.txt  requirements.txt  resources.jsonl  result.json  setup.cfg  setup.py  stats
.github/workflows/: ci.yml  codeql-analysis.yml
devdocs/: CLI_OPTIONS_ANALYSIS.md  CODE_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  SECURITY_FIXES.md
docs/: ARCHITECTURE.md
metacrafter/: __init__.py  __main__.py  config.py  core.py  exceptions.py
metacrafter/classify/: __init__.py  processor.py  stats.py  utils.py
metacrafter/cli/: __init__.py  commands.py
metacrafter/core/: __init__.py  validators.py
metacrafter/integrations/: __init__.py  atlas.py  datahub.py  openmetadata.py
metacrafter/registry/: client.py
metacrafter/server/: api.py  manager.py
rules/basic/: crypto.yaml  identifiers.yaml
rules/common/: boolean.yaml  common.yaml  commonurl.yaml  dateandtime.yaml  geo.yaml  orgs.yaml  (+8 more)
scripts/: allrules.csv  duckdb_to_sqlite.py  generate_meta.py  ner_slovnet.py  reverse_regex.py
tests/: test_api.py  test_atlas_integration.py  test_core.py  test_datahub_integration.py  test_error_handling.py  test_file_formats.py  test_llm_classifier.py  test_llm_config.py  test_llm_integration.py  test_llm_providers.py  test_llm_registry_loader.py  test_openmetadata_integration.py  test_processor.py  test_sqlite_encoding_issue_17.py  test_stats.py  test_utils.py  tests_registry.py
(+45 files in other folders)
