                  [metadata]
name = crafter-classifier
version = attr: dataclassifier.classify.__version__
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
description = Data classifier engine
author = Ivan Begtin
author_email = ibegtin@gmail.com
license = Proprietary
keywords = datacrafter, dataset, distribution, data, classification
scripts =
    classifier.py
zip_safe = False

[options]
install_requires =
	orjson
    phonenumbers
    qddate
    pyparsing
    bson
    yaml
    validators
